# beardlib-converter

./: .gitignore  CMakeLists.txt  README.md  SHA256Sum
Include/rapidjson/: CMakeLists.txt  document.h
alt_templates/: alt_anticipation.xml  alt_assault.xml  alt_control.xml  alt_setup.xml
project/Ino_Glitch/: track.txt
project/alt_templates/: alt_assault.xml  alt_control.xml
project/src/: Converter.cpp  Converter.h  Makefile  main.cpp
project/src/Gui/: Gui.pro  frame.cpp  gui.cpp  main.cpp
project/template/loc/: en.txt
src/: Converter.cpp  Converter.h  Makefile  files.cpp  files.hpp  headers.h  main.cpp  track.cpp  track.hpp  xml.cpp  xml.hpp
src/Gui/: frame.h  gui.h
template/: main.xml
